--- a/source/1. Preface.rst
+++ b/source/1. Preface.rst
@@ -24,5 +24,5 @@
 
 此外，如果争取到代表学校参赛的资格，就能进行另一项重要的活动——与其他高校的学术辩论。学术辩论不同于普通的辩论，其目的到底还是清晰地展示和客观地评价一个研究工作，从而探讨更好的改进方案，其首要原则是实事求是，不能诡辩。赛场上面向的不是对手而是伙伴，共同的目标是弄清楚现象的物理机制，而真相只有一个，不存在两方观点相矛盾但又都有道理的情况，讨论的目的是找到那个真相而非言语上取胜，相互的质疑只是为了帮助消除个人思维的局限性罢了。
 
-%模块大纲：科研教学、物理教学、题目分析教学、实验教学、展示与辩论教学
+.. 模块大纲：科研教学、物理教学、题目分析教学、实验教学、展示与辩论教学
 	
