--- a/source/3. Intro_Research.rst
+++ b/source/3. Intro_Research.rst
@@ -4,3 +4,18 @@
 		
 科学研究……（方法论；需要哪些能力）
 
+^^^^^^^^^^
+科学原则
+^^^^^^^^^^
+百度百科上说，科学是一个建立在可检验的解释和对客观事物的形式、组织等进行预测的有序的知识的系统。
+
+其中，进行预测则是科学的任务，因为人类总是有各种各样的需求，而满足这些需求需要人类做出适当的选择，掌握“如果这样会怎样”的信息对这种选择的帮助是决定性的，这是人类进行科学研究的重要动机，也是为什么科学研究能够得到各种各样的支持。
+
+科学研究中，一切科学命题的真伪应当是可检验的，这就是科学研究与其他知识探索活动的区别所在。不可检验论述的一个著名的例子是“卡尔萨根的喷火龙”：某人声称他的车库里有一条喷火龙，但它具有完美的“透明”特性，以至于任何人类能掌握的探测手段都无法探测到它。这似乎显然是无稽之谈，但你如何反驳它呢？你无法拿出任何证据证明这条龙不存在，因为搜集证据需要你能够探测它，但如果你能探测到它，你找到的就一定不是他所宣称的具有完美隐匿特性的喷火龙。
+
+我们能做的仅仅是指出这不是一个科学的（可检验的）论断，然后无视这条陈述。可见，将研究所要获取的知识限制在可检测的范围内，可以避免对无意义的命题进行不可能实现的研究，把人类有限的精力放在对那些可知的问题的好奇之上。仅仅是了解这一点核心理念，你就能很大程度上免受各种玄学、伪科学让你产生的困扰。
+
+知识包含的信息量是有所不同的，这也一定程度使得知识的有用程度是不同的，一类最有用的科学知识就是那些具有普遍性的规律。比起“明天一定会下雨”这条信息， 一个能够较精确预测天气的可行方法要有用的多，毕竟后者所提供的信息本身就能够判断前者的真伪。
+
+
+
