--- a/source/6. Experiment.rst
+++ b/source/6. Experiment.rst
@@ -1,6 +1,18 @@
-==========
-实验
-==========
-		
-对于一个陌生的、原理未知的现象，实验结果是给出一切可信结论的前提，一个对现象的物理研究是不可能脱离实验的。此外，关于某大类现象的基本物理理论尚未建立时，就主要是通过对实验结果的归纳和抽象的方法才得以建立起基本物理理论的，这就是一类典型的实验先行的物理研究。
+===========
+展示与辩论
+===========
 
+-------------
+演示
+-------------
+
+.. 放到附录里去
+	^^^^^^^^^^^^^^
+	较有用的程序
+	^^^^^^^^^^^^^^
+	数学软件：Mathematica（更全能）、Matlab（更快的矩阵运算）
+	编程语言：Python（更简单的语法）、C++（更高的性能）、Arduino（能迅速上手的单片机编程语言）
+	仿真模拟：COMSOL（更全能）、Ansys系列（某些模块有更多的优化，如流体和弹性体）、Proteus（电路仿真）
+	数据处理：Excel（更方便）、Origin（更专业）、Tracker（对视频中的物体进行跟踪）
+		广告：在这个比赛中，你可以仅学习Mathematica，以上都可以免了。当然如果你已经有Matlab等软件的使用经验，或者有特种的需求（如超高性能计算），就另说了。
+	工程制图：Solidworks（主要3D）、AutoCAD（主要2D）
