--- a/source/4. GetInfo.rst
+++ b/source/4. GetInfo.rst
@@ -2,9 +2,59 @@
 信息搜集
 ==========
 		
-资料乃至于各种各样的信息的搜集在科研中是关键的，这可能包括教材里的基本理论、论文里的新分析方法、网上的实验视频等等。
+资料乃至于各种各样的信息的搜集在科研中是关键的，这可能包括教材里的基本理论、论文里的新分析方法、社交媒体上的实验视频等等。现代搜集这些信息的主要方式是互联网，所以使用搜索引擎、提炼有用信息的能力是至关重要的，这里不对它们作介绍。
 
 ---------------
 基本理论的学习
 ---------------
-基本理论的学习通常借助一本好的教材就可以完成。
+学习的内容分为两方面：基本物理理论和具体问题的解决方法。没有对基本物理理论的理解，也就没有以物理观点看待、分析问题的思维方式，从而 **决不可能** 做出“物理”的研究。没有对具体实用技术、方法的了解，则也不能完成对实际问题的研究。
+
+基本理论的学习通常按照研究的需求借助教材完成。如果你不知道对你的问题进行较专业的研究需要学习哪些知识，向有经验的人请教。
+
+学理论知识时要注意几点：
+
+1. 选择一本一般认为是好的教材。什么是好的教材？一本不错的教材应该让满足学习条件（掌握了先修知识）的学生 **能够** 通过它来充分学会其内容。也就是说，只要有足够的耐心，能在没看明白的情况下再看一遍或者深入思考直至弄懂，读者必定能掌握其中知识。如果你不知道哪些书是好的教材，向有经验的人请教。
+
+2. 根据需求选读。比如某本流体力学的第一章和第三章是讲基本理论，第四章是讲理想流体的运动，第五章讲粘性不可压缩流体，而你只研究接近理想流体的流体，那只就需看一、三、四章。如果发现文中用到了自己没学的知识再翻阅其他章节了解。如果你不知道对你的问题进行研究需要学习哪些知识，向有经验的人请教。
+
+3. 先准备好先修知识再学习你所需要的知识。比如在没有微积分和牛顿力学的基础的情况下看流体力学的书几乎肯定会一头雾水。如果你不知道所需的先修知识有哪些，向有经验的人请教。
+
+4. 遇到不明白的地方，采取多种方式搜集信息来弄懂。通常本科范围内的概念性的知识在英文维基百科上都有靠谱的解说（至少物理领域的知识是这样），普遍开设的课程如微积分、大学物理中的许多问题也在网络上有广泛讨论。进一步的了解可以寻求其他书籍、论文、学者的帮助，除非世上没人知道真相（或者没人把真相说出来），不然总会有办法弄明白。有些抽象的概念、关系不易理解，就寻找更多的实例（通常例题、习题中就会有）来帮助理解。
+
+把握以上四点，我想应该就能保证理论学习的效率和效用了。
+
+--------------------
+论文的搜集和阅读
+--------------------
+通常成体系的知识才会写成专著，或是在为了方便培养学生时编写教材。写文章和会议报告是学术界大范围交流知识的主要两种方式，要即时了解关于某问题的研究进展，必须直接阅读学术论文。
+
+搜集论文包括两个步骤，一是通过有关研究对象的关键词来寻找有哪些相关的论文，二是根据这些论文的题目去获取论文文本。第一步通常依靠学术搜索引擎完成，比如 谷歌学术、百度学术等，也可以直接使用文献数据库（如知网、万方、维普、Web of Science）中集成的搜索引擎。第二步则通过数据库或者盗版文献获取途径（如 sci-hub_ ）完成. 
+
+搜索论文时要注意几点：
+
+1. 首先对你要研究的问题有所了解，知道你研究的问题的关键特点有哪些，并且知道业界是如何给各种概念、实体命名的，这样才能知道用什么样的关键词去搜索。如果你很不了解这些，或许就需要先学习基本物理理论；如果只是有些小疑惑，可以上网搜索或请教熟悉这领域的人。
+
+2. 如果对一个问题的研究已经有一定规模，那么很可能会有学位论文(Thesis)和综述论文(Review)，它们会对它所用的分析方法的理论基础和该问题的研究现状都作较详细的介绍，对新手很重要。
+
+3. 前沿研究成果一般都发布在英文期刊上（除了学位论文），中文期刊上大多是一些不那么有价值、手段并不很高明的结果，但许多时候后者对新手更有用。
+
+4. 通过标题和摘要(Abstract)了解文章完成的工作和所用的方法，进而判断你是否需要阅读这篇文章。
+
+5. 避免付费。
+
+此外，有一个国外学者建立的个人网站 http://kit.ilyam.org ，会在每届IYPT题目发布的数月之后发布一个文档来提供自己的文献调研结果，里面提供的资料（文章名称或视频链接） **可能** 对你有用。不过由于有为了保持局势稳定而建立的GFW，你无法在不用特殊手段的情况下访问其中的Youtube链接，这时你可以使用一些带有视频转存功能的网站，比如 onlinevideoconverter_ 。
+
+当你认为一篇论文能够让你更好地了解这个现象，或者你正尝试使用的分析方法与文章中所用的有关，你就有必要读一读相应的论文。学术文章的结构通常包括摘要、引言(Introduction)、主体（可能包括理论分析、实验结果等多个小节）和结论(Conclusion)，其中引言部分通常是介绍研究对象的应用场景、基本原理、研究现状。
+
+对于读文章的方法我有几个可用的建议：
+
+1. 如果你英文水平不高，也不必畏惧英文文章。学术写作的习惯不同于文学写作，多用简单词、简单句。用词基本上是日常词汇和该领域的术语，对于这两种生词都只需要现场查含义代入语句理解即可，持续阅读一段时间后生词量就基本没多少了。相比之下，如果因为英文水平尚不高而错过大量有用的文章，可能更加费时费力。
+
+2. 阅读过程中做简洁的笔记来总结收集到的信息，有助于对它们的理解和后续的查阅。
+
+3. 如果文章研究的对象与你的相同，你可以尝试重复文中的理论推导、数值计算或实验测量。
+
+.. _sci-hub: https://sci-hub.org.cn/
+
+.. _onlinevideoconverter: https://www.onlinevideoconverter.com/video-converter
+
