--- a/source/4. GetInfo.rst
+++ b/source/4. GetInfo.rst
@@ -2,7 +2,7 @@
 信息搜集
 ==========
 		
-资料乃至于各种各样的信息的搜集在科研中是关键的，这可能包括教材里的基本理论、论文里的新分析方法、社交媒体上的实验视频等等。现代搜集这些信息的主要方式是互联网，所以使用搜索引擎、提炼有用信息的能力是至关重要的，这里不对它们作介绍。
+资料乃至于各种各样的信息的搜集在科研中是关键的，这可能包括教材里的基本理论、论文里的新分析方法、社交媒体上的实验视频等等。搜集信息的基本原则是时刻知道自己需要的是什么，从而能判断信息对自己有没有用。现代搜集这些信息的主要方式是互联网，所以使用搜索引擎、提炼有用信息的能力是至关重要的，这里不对它们作介绍。
 
 ---------------
 基本理论的学习
@@ -42,8 +42,6 @@
 
 5. 避免付费。
 
-此外，有一个国外学者建立的个人网站 http://kit.ilyam.org ，会在每届IYPT题目发布的数月之后发布一个文档来提供自己的文献调研结果，里面提供的资料（文章名称或视频链接） **可能** 对你有用。不过由于有为了保持局势稳定而建立的GFW，你无法在不用特殊手段的情况下访问其中的Youtube链接，这时你可以使用一些带有视频转存功能的网站，比如 onlinevideoconverter_ 。
-
 当你认为一篇论文能够让你更好地了解这个现象，或者你正尝试使用的分析方法与文章中所用的有关，你就有必要读一读相应的论文。学术文章的结构通常包括摘要、引言(Introduction)、主体（可能包括理论分析、实验结果等多个小节）和结论(Conclusion)，其中引言部分通常是介绍研究对象的应用场景、基本原理、研究现状。
 
 对于读文章的方法我有几个可用的建议：
@@ -53,8 +51,4 @@
 2. 阅读过程中做简洁的笔记来总结收集到的信息，有助于对它们的理解和后续的查阅。
 
 3. 如果文章研究的对象与你的相同，你可以尝试重复文中的理论推导、数值计算或实验测量。
-
-.. _sci-hub: https://sci-hub.org.cn/
-
-.. _onlinevideoconverter: https://www.onlinevideoconverter.com/video-converter
 
