--- a/source/5. Research.rst
+++ b/source/5. Research.rst
@@ -77,6 +77,8 @@
 
 #. 对于许多领域的问题，你能找到的参量之间并非独立，为了避免多余的研究、揭示现象的本质，最好对各个物理量进行“无量纲化”。
 
+#. 如果涉及的数学问题在当前看来过于难解，你可以寻找物理模型是否有简化的余地，求助于其他的数学工具以及计算机。
+
 #. 得到结果以后，为了保证没有疏漏，做一次彻底的检查是很好的。这也能帮助你整理思路。
 
 ^^^^^^^^^^^^^^
