--- a/source/5. Research.rst
+++ b/source/5. Research.rst
@@ -16,7 +16,7 @@
 ^^^^^^^^^^^
 明确现象
 ^^^^^^^^^^^
-题中说了放置(placed)，那么究竟是怎么放置的？是斜着插入饮料、还是横在水面上（有点扯）、或者是竖着立在杯底？光看这句话是无法分辨的，三种都有可能。
+题中说了放置(placed)，那么究竟是怎么放置的？是斜着插入饮料、还是横在水面上、或者是竖着立在杯底？光看这句话是无法分辨的，三种都有可能。
 
 后面说吸管可能从杯壁上翻倒(topple over the edge，翻译未必准确)，什么样算是topple？是从杯子里翻出去、还是从树立在杯中央的状态开始倾倒在杯壁上？
 
@@ -47,15 +47,15 @@
 ^^^^^^^^^^^^^^
 在之前的探索中，你可能已经搭建过简易的装置来观察现象。但如果需要进行精确的实验测量，装置的严谨搭建就需要格外注意了，唯一的改善方法就是不断思考、不断测试哪里可能有意料之外的疏漏影响了你研究结论的可靠性。在实验中，有几点值得特别注意：
 
-1. 根据你的需求来购买器材，不一定要因为某些器材容易得到就使用它们。如果你的研究方案在现有条件下不能直接实现，寻找更巧妙的方案或者换一种研究思路。如果你不知道自己的需求或没有一个研究方案，说明你还需要通过简单的探索和测试来收集信息，在那之后你才能走到这一步。
+#. 根据你的需求来购买器材，不一定要因为某些器材容易得到就使用它们。如果你的研究方案在现有条件下不能直接实现，寻找更巧妙的方案或者换一种研究思路。如果你不知道自己的需求或没有一个研究方案，说明你还需要通过简单的探索和测试来收集信息，在那之后你才能走到这一步。
 
-2. 如果你打算忽略装置某处的不严谨之处，你最好通过理论或实验粗略估计这样做造成了多大的影响，并且把估计的结果作为证据记录下来。
+#. 如果你打算忽略装置某处的不严谨之处，你最好通过理论或实验粗略估计这样做造成了多大的影响，并且把估计的结果作为证据记录下来。
 
-3. 有些领域（如光学）有实验装置搭建的一些规范，如果有就先加以了解并应用之。
+#. 有些领域（如光学）有实验装置搭建的一些规范，如果有就先加以了解并应用之。
 
-4. 搭建好实验装置之后，还要尝试进行一些你可能用得上的测量，从而在熟悉操作方法的同时了解装置搭建和测量的方案有没有什么不妥之处。
+#. 搭建好实验装置之后，还要尝试进行一些你可能用得上的测量，从而在熟悉操作方法的同时了解装置搭建和测量的方案有没有什么不妥之处。
 
-5. 许多实用设备的功能都是复杂的（比如手机相机往往会默认地进行自动对焦和图像优化），可能有意料之外的机制影响了测量到的结果。要么选用更简单的设备（比如使用CCD代替手机拍摄），要么使用可控的设备（比如使用专业的摄影相机或者拍照软件）。
+#. 许多实用设备的功能都是复杂的（比如手机相机往往会默认地进行自动对焦和图像优化），可能有意料之外的机制影响了测量到的结果。要么选用更简单的设备（比如使用CCD代替手机拍摄），要么使用可控的设备（比如使用专业的摄影相机或者拍照软件）。
 
 ^^^^^^^^^^^^^^
 数据处理
@@ -71,13 +71,11 @@
 ^^^^^^^^^^^^^^
 理论分析的目标可能有很多种，但最常见的目标就是要使用普遍的物理规律 **预测** 某个具体模型的某些物理量的变化和分布规律。特别的建议有：
 
-#. 当问题过于复杂而使得你无法前进时，可以做一些近似或者换一种分析方法。
-
-#. 可以使用带有符号计算功能的数学软件帮助你进行你所不能完成的推导，比如对微分方程求解析解。
+#. 当问题过于复杂而使得你无法前进时，可以做一些近似或者换一种分析方法。寻找物理模型是否有简化的余地，求助于其他的数学工具以及计算机。可以使用带有符号计算功能的数学软件帮助你进行你所不能完成的推导，比如尝试对微分方程求解析解。如果你需要挑选使用什么工具（技术、方法、软件等），可以自己搜集资料决定，也可以向有经验的人请教。首要原则是要能解决你的问题，其次是要更有效率。许多情况下使用较完善的现成工具是好的，这样的工具资料更多从而易于学习、功能更强而更容易解决问题：不要重复发明一遍轮子。
 
 #. 对于许多领域的问题，你能找到的参量之间并非独立，为了避免多余的研究、揭示现象的本质，最好对各个物理量进行“无量纲化”。
 
-#. 如果涉及的数学问题在当前看来过于难解，你可以寻找物理模型是否有简化的余地，求助于其他的数学工具以及计算机。
+#. 专注于这个现象特别的地方，忽视那些不必要的因素。最杰出的一类物理学家能够做出尽可能夸张的简化、近似，同时保证结论没有多少偏差（当然，前者成立后者不成立的情况就是败笔了）。
 
 #. 得到结果以后，为了保证没有疏漏，做一次彻底的检查是很好的。这也能帮助你整理思路。
 
