--- a/source/1. Preface.rst
+++ b/source/1. Preface.rst
@@ -24,5 +24,5 @@
 
 此外，如果争取到代表学校参赛的资格，就能进行另一项重要的活动——与其他高校的学术辩论。值得一提的是，学术辩论不同于普通的辩论，其目的到底还是清晰地展示和客观地评价一个研究工作，从而探讨更好的改进方案，其首要原则是 **实事求是** ，不能诡辩。赛场上面向的不是对手而是伙伴，共同的目标是弄清楚现象的物理机制，而真相只有一个，不存在两方观点相矛盾但又都有道理的情况，讨论的目的是找到那个真相而非言语上取胜，相互的质疑只是为了帮助消除个人思维的局限性罢了。
 
-**向他人展示自己的研究成果** ，这在研究工作中也是不可缺少的。你能让别人认为你的研究有价值，才能得到各方面的支持。此外，展示的过程也是整理的过程，在回顾过去工作的过程中能加深自己对问题的理解。学术辩论过程中所涉及的对他人研究成果的讨论、评价，这些同样对敏捷思维的训练和深刻理解的积累大有好处。
+**向他人展示自己的研究成果** 在研究工作中也是不可缺少的。你能让别人认为你的研究有价值，才能得到各方面的支持。此外，展示的过程也是整理的过程，在回顾过去工作的过程中能加深自己对问题的理解。学术辩论过程中所涉及的对他人研究成果的讨论、评价，这些同样对敏捷思维的训练和深刻理解的积累大有好处。
 	
