--- a/source/6. Tournament.rst
+++ b/source/6. Tournament.rst
@@ -2,14 +2,14 @@
 赛场表现
 ===========
 
--------------
-比赛规则
--------------
+---------------
+比赛规则与策略
+---------------
 国赛的比赛规则详见官方文件，其中的核心规则将在此被简化后重述、讨论。
 
-每轮比赛中，三支3~5人的参赛队伍轮流扮演正方(Report)、反方(Opposite)、评论方(Review)，进行三场比赛。在国赛/地区赛/省赛内，这样由多场比赛组成的一轮比赛通常会更换对手举行数轮。
+每轮比赛中，三支3~5人的参赛队伍轮流扮演正方(Report)、反方(Opposite)、评论方(Review)，进行三场（阶段）比赛。在国赛/地区赛/省赛内，这样由多场比赛组成的一轮比赛通常会更换对手举行数轮。
 
-每一场比赛定时45分钟，具体流程如下：
+每一场（阶段）比赛定时45分钟，具体流程如下：
 
 +------------+------------+
 |    流程    |  限时/min  |
@@ -44,19 +44,164 @@
 比赛规则并不给出对参赛者的任务的具体限定，之后我会尝试根据规则对每个环节需要做什么的问题进行分析。
 
 ^^^^^^^^^^^^^^
-正方基本策略
+关于正方的规则
 ^^^^^^^^^^^^^^
-*这部分仍在开发*
+正方需要进行的活动有
+
+- 进行研究报告
+- 与反方讨论
+- 回答反方和评论方的问题
+- 进行总结
+
+官方给出的对正方的要求：正方就某一问题做陈述时，要求重点突出，包括实验设计、实验结果、理论分析以及讨论和结论等。
+
+官方给出的对正方的评分标准有：
+
+- 内容
+	- 物理的正确性
+	- 论据是否切题
+	- 科学方法的正确运用
+	- 实验、理论及其一致性
+	- 结论的说服力
+- 表达
+	- 思路清晰
+	- 公式和符号的正确解释
+	- 正确的模型，量纲的一致性
+	- 视频资料（现场实验，音频，视频）
+	- 表达清楚
+	- 正确的参考文献
+- 讨论
+	- 物理的正确性
+	- 论据是否切题
+	- 恰当及扎实的物理知识
+	- 客观的辩论
+	- 对反方异议的讨论
+	- 礼貌的态度
+	- 对评论方的回答和总结发言
+	- 评委的问题和回答
 
 ^^^^^^^^^^^^^^
-反方基本策略
+关于反方的规则
 ^^^^^^^^^^^^^^
-*这部分仍在开发*
+反方需要进行的活动有
+
+- 提问正方
+- 进行反方报告
+- 与正方讨论
+- 回答评论方的问题
+
+官方给出的对反方的要求：反方就正方陈述中的弱点或者谬误提出质疑，总结正方报告的优点与缺点。但是，反方的讨论过程不得包括自己对问题的解答，只能就正方的解答展开讨论。
+
+官方给出的对反方的评分标准有：
+
+- 问题/表达
+	- 提问是否离题
+	- 物理的正确性
+	- 表达清楚易懂
+	- 指出正方的优缺点
+- 讨论
+	- 物理的正确性
+	- 论点是否切题
+	- 恰当及扎实的物理知识
+	- 礼貌的态度
+	- 讨论正方的报告内容
+	- 正确回答评论方与评委的提问
+
+^^^^^^^^^^^^^^^^
+关于评论方的规则
+^^^^^^^^^^^^^^^^
+评论方需要进行的活动有
+
+- 提问正反方
+- 进行评论方报告
+
+官方给出的对评论方的要求：评论方对正反方的陈述给出简短评述。
+
+官方给出的对评论方的评分标准有：
+
+- 是否切题
+- 指出正/反方在物理上及辩论中的优缺点
+- 给出本阶段赛的一个完整的评价
+- 讨论报告中的事实并避免冲突
 
 ^^^^^^^^^^^^^^
-评论方基本策略
+主控基本策略
 ^^^^^^^^^^^^^^
-*这部分仍在开发*
+从规则可以看出：正方的定位就是 **通过报告和讨论来展示研究成果** ，对于听者而言，其地位是基本的。反方的定位是 **借助提问和讨论来搜集信息，以此评价、揭示、总结正方报告中的优缺点** ，听者可以通过反方的活动深入了解正方研究。评论方的定位是 **整理总结报告和讨论的结果并补充遗漏点** ，能使听者更明朗了解之前的内容，并补充一些对正方研究方向以外的话题的了解，从而对问题本身都有一个全局的了解。
+
+那么，每个环节应当做什么？
+
+- 正方报告展示实验设计、实验结果、理论分析，进行讨论、给出结论。
+- 反方提问设在反方报告之前，通常是用于询问、确认一些疑点，以便之后能写进报告。正方当然如实回答。
+- 反方报告可以总结正方的研究思路，并指出其中各做法的优势和缺陷。
+- 正反方讨论时，反方作为“异议者”控制着话题，反方提出质疑的对象，双方共同讨论研究的合理性和改进方法。
+- 评论方提问同样是用于确认疑点，尤其是可能的遗漏点。
+- 评论方报告整理总结报告和讨论的结果并补充遗漏点。
+- 正方总结报告总结自己的研究思路，并根据之前的讨论和反方、评论方的报告总结出一些可取的改进方案。
+
+下列 **规则中列出的要点** 对于主控队员、尤其是正方和反方而言都是 **相通** 的：
+
+- 物理理解、研究方法的正确性、结论的说服力是不能通过改进赛场表现策略来提高的，而是依赖于之前的积累。为数不多能改进的就是：在想不到问题的答案时坦白自己不知道，而不是临时拼凑出一个连自己都不相信的不可靠结果；在结论的说服力确实不强的时候讨论其缺陷所在以及改进方案，而不是以为自己辩解为出发点。
+- 使论据切题、思路清晰、表达清楚、辩论客观等是进行学术交流者所应当具备的交流能力。练习这些能力的一个重要原则是：站在听者的角度评价自己的发言。只有切题了的陈述、分类了的话题、精确的表达才能保证听者理解。而态度客观的辩论使得你更接近“正确”。
+- 解释公式及其中符号的含义、使用多媒体资料是符合展示的根本原则的，能使被展示的内容容易理解、使你想表达的真确地传达到听者脑海。
+- 用语礼貌、列出参考文献不需要解释。
+
+由于正反评三方都有在赛场上 **临时准备报告** 的需求（时间可能非常紧张），准备一个演示文稿的模版并预先向里面填充可能用得上的内容是必要的。也不要仅仅在给定的准备环节准备演示文稿，在听正方报告、反方报告、正反讨论、评论方报告的同时就随着自己的思考输入一些文字是很有用的。这样，在报告前只需要填充少量的文本、进行一些删除和粘贴就能完成准备，而不需要输入过多的文字、不需要操心格式。同时，打字速度也将决定你能临时放上多少内容，如果主控打字很慢，可以让队友帮忙输入。
+
+如果之前不清晰的讨论造成了对正方的误会，正方可以在进行 **正方总结报告时** 澄清，但不必作无谓的辩解，那可能会让你准备的其他可靠的内容也变得看上去不可信。
+
+^^^^^^^^^^^^^^^^^^
+关于其他队员
+^^^^^^^^^^^^^^^^^^
+在每一阶段的比赛中，每支队伍只能由一人主控发言，其他队员只能做协助工作，可以和主控队员交流，但不能替代主控队员进行陈述。
+
+如何让非主控队员发挥作用是很关键的。通常，其他队员可以
+
+- 提出对物理问题的见解，比如对特定问题的回答、或者对某一问题的价值的强调
+- 关注那些不需要对题目有太多了解的方面，如报告的规范性
+- 帮忙改演示文稿
+- 将以上内容进行筛选后，与主控适度地交流
+
+要知道主控很忙，使用文本（小纸条）进行提示应当是主要的方式，只有非常紧急的消息才适合用声音传递给主控。队伍可能需要一个网络连接跨越物理位置的障碍来快速传递文本，这将是非主控队员之间的主要交流方式。
+
+^^^^^^^^^^^^^^^^^^
+关于队伍
+^^^^^^^^^^^^^^^^^^
+每轮对抗赛中，每人最多主控 **2** 次。一支队的全部比赛中，每人最多作正方主控 **3** 次。[1]_
+
+每一阶段的成绩由多位裁判给出，由 :math:`((\text{最高分}+\text{最低分})/2+\text{其他分数})/(\text{裁判数}-1)` 计算，即极端分数权重减半的平均分。每一轮的成绩由三个阶段（角色）的成绩给出： :math:`\text{正方得分}\times 3+\text{反方得分}\times 2+\text{评论方得分}`，其中正方得分所占权重可能因为进行过多拒绝降低。
+
+在一支队伍的全部比赛中正方对于可供挑战的题目，总计可以拒绝 **3** 次而不被扣分，之后每拒绝一次则从正方的基础加权系数 3 中扣去 **0.2** ，这个惩罚作用于所有轮次的分数。累计拒绝 **6** 次，将不计名次，不参与评奖。[1]_
+
+反方可以向正方挑战任何一道题目，但有以下情况除外：
+- 在本轮，曾被陈述过的题目（不会被解除）
+- 在所有轮次中，正方曾（作为正方）拒绝过的题目
+- 在所有轮次中，正方曾（作为正方）报告过的题目
+- 在所有轮次中，反方曾（作为反方）挑战过的题目
+- 在所有轮次中，反方曾（作为正方）报告过的题目
+如果可供挑战的题目小于5道（这种情况很少），则上述限制按照倒序依次解除，直到可挑战题数为5。
+
+最后一轮各阶段的题目由正方在此阶段开始时自选并公布，相同题目仍然不能在同一轮中重复出现，之前作为正方报告过的题目仍不能被选择。自选此题进行陈述后，不能在决赛报告此题。
+
+每轮比赛前，你们应当结合手上的对阵图和选题情况表分析你可能会做那些题目的正/反/评，进行进一步的准备（比如回顾之前准备好的笔记），尤其是要考虑反方挑战什么题目。
+
+由于正方分数加权系数高、且高度依赖于赛前实验研究的积累，通常会有避免做得不好的题目被挑战的需要，除了使用有限次数的拒绝权以外，利用规则也有希望做到这一点：如果你们的队伍作正方在作反方之前，那么你可以挑战你想要“保护”的题目。如果挑战成功，作正方时你们不可能被挑战这题。但按照规则，有时你不能挑战这题。
+
+.. [1] 这一规则中的数值可能与当届比赛的真实情况不同。
+
+^^^^^^^^^^^^^^
+进攻性策略
+^^^^^^^^^^^^^^
+以上策略都是基于“如何提高自己得分”的“防御性策略”，实际上你还可以适当使用“进攻性策略”来降低对手的得分。了解它不仅仅是为了攻击别人，也为了保护自己。
+
+防守型策略的本质是 **以研究本身为讨论核心** ，对事不对人。进攻性策略则包括通过诱导性提问来尽可能地展现对手的错误认识之类的做法，使其不符合评分表上的要求。根据规则，可以发现常规的进攻性策略包括
+- 诱导对方作出错误陈述。例：发现对方似乎对此领域的问题不了解之后，请对方谈谈对此领域某个基本物理概念的理解。应对方法：无，不要逞强以免进一步造成坏印象。
+- 指出正方展示材料的格式不规范之处：例：发现正方没有在演示文稿上标注页码之后，请对方翻到某页，造成“正方材料不规范影响正常讨论”的印象。应对方法：使讨论继续进行，不受材料缺陷的影响，避免这一缺陷被强调。
+- 诱导反方提及自己的实验。例：“我们就是这样的结果，你们做出不一样的结果了？”应对方法：以规则不允许为由拒绝直接回答，仅仅从理论上分析对方实验结果的合理性，避免实验结果的比较。 
+
+有效的进攻能让人无法确认自己在进行进攻，避免造成自己“卑鄙”的印象。此外，由于比赛的主题是物理，直接指出对方的格式错误等问题属于离题行为，间接指出的方法可以参考上面的例子。
+
+另一类通用的策略是通过反问、冗长的陈述、扯开话题来扰乱对手思路、拖延时间，这在减少自己表现内容的同时阻止对手表现，甚至有可能引起对手情绪的波动，进而作出不审慎的思考和陈述。这个做法完全违背比赛初衷，我是痛恨的，如果你见过一次你大概也会痛恨它。一个比较友好的变体是：承认自己不了解对方希望讨论的内容从而拒绝讨论，这个做法起到类似的效果，但像是无奈之举，对自己的分数也有不小影响（这也是为什么正方弱的场次通常反方的得分也不高——讨论不起来）。应对的方式是：如果对手拉开话题，那么指出“话题正被拉开”这一点并询问对方是否要放弃当前话题的讨论；如果对手进行大量的反问，那么简短陈述自己的回答再反问回去；如果对手进行冗长的陈述，那么可以以时间有限为由打断对方（如果这个回答不那么重要），此后不要再提不关键的问题以避免对手有太多拖时间的机会。
 
 -------------
 学术报告
@@ -71,8 +216,4 @@
 
 *这部分仍在开发*
 
--------------
-其他策略
--------------
-*这部分仍在开发*
 
