debug,more strategy

--- a/source/2. Intro_Tournament.rst
+++ b/source/2. Intro_Tournament.rst
@@ -8,7 +8,7 @@
 竞赛任务
 -----------
 
-竞赛要求一个队伍（3~5人）完成指定的研究任务，然后在赛场上扮演 **正方[Report]** 、 **反方[Opposite]** 、 **评论方** 三种角色。三种角色的任务分别是 **报告研究成果并与反方讨论以及回答反方和评论方的问题** 、 **总结正方研究的优缺点并且深入讨论改进方案或物理本质等** 、 **总结报告和讨论要点并且补充遗漏点** 。
+竞赛要求一个队伍（3~5人）完成指定的研究任务，然后在赛场上扮演 **正方[Report]** 、 **反方[Opposite]** 、 **评论方[Review]** 三种角色。三种角色的任务分别是 **报告研究成果并与反方讨论以及回答反方和评论方的问题** 、 **总结正方研究的优缺点并且深入讨论改进方案或物理本质等** 、 **总结报告和讨论要点并且补充遗漏点** 。
 
 -----------
 赛题
