New Title for part7

--- a/source/7. Appendix.rst
+++ b/source/7. Appendix.rst
@@ -2,9 +2,9 @@
 附录
 ===========
 
---------------
-2020年竞赛题目
---------------
+----------------------------
+2020年竞赛题目与试析
+----------------------------
 我提供的中文翻译和注解仅供参考。翻译的原则是：在中英文的分句能一一对应的前提下，标题尽量还原词汇的背景含义和艺术性（而可能与题目内容关系并不密切），现象描述部分尽量亲切地表述原文最可能要指代的现象（而可能导致含义变得狭窄），任务指定部分尽量保持原意（而不限定任何题意理解和研究的方向）。
 
 我提供某些文献，可能是出于希望读者学习其方法，也可能是因为其参考文献、印证文献的列表有较大的参考价值，但读者不一定一开始就适合阅读它们。我指出的研究领域和方向很可能不正确或是不准确，且仅建议在完全不知所措时参考，否则会错过锤炼信息搜寻能力、积累见闻的机会，而且即便方向正确，它们也不一定适合读者去试，因为它们基于学术上的价值取向而非竞赛的价值取向。
