--- a/source/7. Appendix.rst
+++ b/source/7. Appendix.rst
@@ -7,7 +7,9 @@
 ----------------------------
 我提供的中文翻译和注解仅供参考。翻译的原则是：在中英文的分句能一一对应的前提下，标题尽量还原词汇的背景含义和艺术性（而可能与题目内容关系并不密切），现象描述部分尽量亲切地表述原文最可能要指代的现象（而可能导致含义变得狭窄），任务指定部分尽量保持原意（而不限定任何题意理解和研究的方向）。
 
-我提供某些文献，可能是出于希望读者学习其方法，也可能是因为其参考文献、印证文献的列表有较大的参考价值，但读者不一定一开始就适合阅读它们。我指出的研究领域和方向很可能不正确或是不准确，且仅建议在完全不知所措时参考，否则会错过锤炼信息搜寻能力、积累见闻的机会，而且即便方向正确，它们也不一定适合读者去试，因为它们基于某些学术上的价值取向而非不利于竞赛成绩的价值取向。
+我提供某些文献，可能是出于希望读者学习其方法，也可能是因为其参考文献、印证文献的列表有较大的参考价值，但读者不一定一开始就适合阅读它们。我指出的研究领域和方向很可能不正确或是不准确，且仅建议在完全不知所措时参考，否则会错过锤炼信息搜寻能力、积累见闻的机会，而且即便方向正确，它们也不一定适合读者去试，因为它们基于某些学术上的价值取向而非不利于竞赛成绩的价值取向。对于比赛，自圆其说永远比实验与理论不相符要好。
+
+寻找更多资料，可以访问：http://stemfellowship.org/iypt-2020-references-2/。
 
 1. 自己发明 Invent Yourself
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
@@ -22,11 +24,11 @@ What are the accuracy, precision and limits of the method?
 
 * 关键词
 	- 电流传感器（仪器科学、电路学）
-	- 焦耳效应（固体电子学）
+	- （固体的）焦耳效应（固体电子学）
 	- 发热功率的统计（热学）
 
 * 路线
-	- 电路设计：根据电路中信号的类型，尽量降低发热对电路中信号的影响。
+	- 电路与电热器件设计：根据电路中信号的类型，在尽量增大发热量的同时尽量降低发热对电路中信号的影响。
 	- 热功率测量：响应快（时间分辨率高）、低系统误差、易定标的热传感器。
 	- 分析你所采用的这类设计各方面的理论极限。
 
@@ -48,6 +50,9 @@ Explain the phenomenon.
 	- 宽德效应 `Coandă Effect <https://en.wikipedia.org/wiki/Coandă_effect>`_
 	- 蜡烛是如何被吹灭的？
 
+* 高手示范
+	- M Trancossi, A Dumas, D Vucinic. `Mathematical Modeling of Coanda Effect. <https://www.researchgate.net/publication/289830815_Mathematical_Modeling_of_Coanda_Effect>`_ SAE Technical Papers, 2013, 10.4271/2013-01-2195. 
+
 * 路线
 	- 进行对不同瓶子的不同气流流速、口径、距离、角度的定常流场分析，并借此预测吹灭蜡烛的难易程度。
 
@@ -63,10 +68,11 @@ Study the characteristics of the sounds produced by such toys, and how they are 
 
 * 关键词
 	- 声驻波（声学）
-	- 惯性力引起的弯曲（弹性力学）
+	- 惯性力引起的弯曲（连续体力学）
 	- 惯性力引起的气流（流体力学）
 
-* 参考
+* 从这里开始
+	- `Whirly Tube <https://en.wikipedia.org/wiki/Whirly_tube>`_
 	- Amorim M E , Sousa T D , Carvalho P S , et al. `A Simple Experiment to Explore Standing Waves in a Flexible Corrugated Sound Tube[J]. <http://sci-hub.tw/10.1119/1.3628265>`_ Physics Teacher, 2011, 49(6):360.
 
 * 路线
@@ -90,11 +96,11 @@ Investigate the phenomenon.
 
 * 从这里开始
 	- 磁致伸缩效应 `Magnetostriction <https://en.wikipedia.org/wiki/Magnetostriction>`_
+	- Selim Yürekten, Yunus Sert, Miroslav Trnan, Enis Ceylan. `The Parameters of Generated Sound Level of Transformer Cores. <http://www.sciencedirect.com/science/article/pii/S1877705817342534 > `_ Procedia Engineering, 2017, 202:273-279.
 
 * 路线
-	- 谐振频率下的现象
-	- 窄带信号的频率响应特性
-	- 宽频带信号下的特性
+	- 换信号：谐振频率下的现象、窄带信号的频率响应特性、宽频带信号下的特性
+	- 换材料：各向同性/各向异性铁磁介质
 
 5. 甜蜜泡影 Sweet Mirage
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
@@ -110,8 +116,8 @@ Investigate the phenomenon.
 	- 折射定律（几何光学）
 	- 折射率梯度（一点点流体力学、热光效应等）
 
-* 参考
-	- Greenler R G . `Laboratory simulation of inferior and superior mirages[J]. <https://www.osapublishing.org/josaa/abstract.cfm?uri=JOSAA-4-3-589>`_ Journal of the Optical Society of America A, 1987, 4(3):589-590.
+* 从这里开始
+	- Young A T , Frappa E . `Mirages at Lake Geneva: the Fata Morgana[J]. <http://sci-hub.tw/10.1364/ao.56.000g59>`_ Applied Optics, 2017, 56(19):G59.
 
 * 路线
 	- 激光光斑的摩根勒菲蜃景重现
@@ -129,16 +135,17 @@ Investigate the parameters that determine the time of sinking.
 探究决定下沉时间的参量。
 
 * 关键词
-	- 浮力、粘滞阻力（流体力学）
-	- 下沉时间（力学）
+	- 浮力、泊肃叶流动（流体力学）
+	- 动力学方程的逆函数（力学）
 
-* 参考
+* 从这里开始
+	- `StackExchange Physics: What physics equation can be used to describe the saxon bowl experiment? <https://physics.stackexchange.com/questions/416112/what-physics-equation-can-be-used-to-describe-the-saxon-bowl-experiment>`_
+	- `Ilinblog <http://ilinblog.ru/article.php?id_article=58>`_
 	- Greer A , Kincanon E . `An experiment with Saxon bowls[J]. <https://www.researchgate.net/publication/239045627_An_experiment_with_Saxon_bowls>`_ Physics Teacher, 2000, 38(2):112-112.
 
 * 路线
-	- 纵向均匀、底面较大的“萨克逊桶”分析
-	- 纵向非均匀、轴对称的萨克逊碗分析
-	- 纵向非均匀、非轴对称的“萨克逊容器”分析
+	- 通过流体力学确定小孔流量的表达式
+	- 受力分析给出动力学方程，并将时间看作位置的函数积分
 
 7. 绳上球 Balls on a String
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
@@ -154,6 +161,12 @@ Investigate the phenomenon.
 	- 支点振动的摆问题（非线性动力学）
 	- 参数振动（理论力学）
 	- 双摆问题（非线性动力学）
+
+* 从这里开始
+	- `Astrojax <https://en.wikipedia.org/wiki/Astrojax>`_
+
+* 高手示范
+	- Philip Du Toit. `The Astrojax Pendulum and the N-Body Problem on the Sphere: A study in reduction, variational integration, and pattern evocation. <http://www.cds.caltech.edu/~marsden/wiki/uploads/projects/geomech/Dutoit2005.pdf>`_ Student Projects in Marsden Research Projects, 2005.
 
 * 路线
 	- 建立数值计算用的模型
@@ -174,13 +187,8 @@ Investigate the properties of such a membrane filter.
 * 关键词
 	- 表面张力、润湿性（介质界面物理）
 
-* 参考
-	- Zou J , Wang W , Ji C , et al. `Droplets passing through a soap film[J]. <http://sci-hub.tw/10.1063/1.4986798>`_ Physics of Fluids, 2017, 29(6):062110.
-
-* 路线
-	- 使用疏水液体进行实验，确定临界质量、临界高度，总结经验规律。
-	- 使用表面能理论分析“反泡泡”的平衡状态，进而得到临界条件。
-	- 考虑润湿作用，使用粗糙固体颗粒实验。
+* 高手示范
+	- BB Stogin, L Gockowski, H Feldstein, H Claure, J Wang, TS Wong. `Free-standing liquid membranes as unusual particle separators[J]. <https://advances.sciencemag.org/content/4/8/eaat3276>`_ Science Advances, 2018, 4(8):eaat3276.
 
 9. 磁悬浮 Magnet Levitation
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
@@ -197,7 +205,7 @@ Investigate the origins of the dynamic stabilization of the “flea” and how i
 	- 磁场分布（电磁场论）
 	- 动力学稳定性 [#]_ （力学）
 
-* 起源
+* 高手示范
 	- K. A. Baldwin, J.-B. de Fouchier, P. Atkinson, et al. `Magnetic Levitation Stabilized by Streaming Fluid Flows[J]. <https://arxiv.org/pdf/1805.08608.pdf>`_ Physical Review Letters, 2018, 121(6):064502-.
 
 * 路线
@@ -219,10 +227,11 @@ Investigate the characteristics of the conducting line.
 	- 伏安特性（固体电子学）
 	- 频率响应特性（固体电子学）
 
-* 参考
+* 特别提醒
 	- Kurra N , Dutta D , Kulkarni G U . `Field effect transistors and RC filters from pencil-trace on paper[J]. <http://sci-hub.tw/10.1039/C3CP50675D>`_ Physical Chemistry Chemical Physics, 2013, 15(21):8367.
 
 * 路线
+	- 了解不同铅笔的石墨含量，以及石墨密度对导电性的影响。
 	- 对不同铅笔测量不同温度下的阻抗特性，并将结果与某些固体电子论的预测比较。
 
 11. 漂移斑点 Drifting Speckles
@@ -242,8 +251,11 @@ Explain the phenomenon and investigate how the drift depends on relevant paramet
 * 从这里开始
 	- `知乎：为什么激光光束（或其反射）会看起来有颗粒感？ <https://www.zhihu.com/question/27062939/answer/35097037>`_
 
+* 高手示范
+	- Duncan D , Kirkpatrick S . `Algorithms for simulation of speckle (laser and otherwise)[C]. <https://www.researchgate.net/publication/233783056_Algorithms_for_simulation_of_speckle_laser_and_otherwise>`_ Spie-bios Photonics West. 2008.
+
 * 路线
-	- 用随机表面模型解释光强分布的改变，并通过统计方法给出预言。
+	- 用随机表面模型解释光强分布的改变，并通过统计方法给出规律。
 
 12. 多边形旋涡 Polygon Vortex
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
@@ -259,7 +271,7 @@ Explain this phenomenon and investigate the dependence on the relevant parameter
 	- 旋转中的液体（流体力学）
 	- 流体力学对称性破缺（场论）
 
-* 参考
+* 高手示范
 	- Jansson T R N , Haspang M P , Jensen K H , et al. `Polygons on a Rotating Fluid Surface[J]. <https://arxiv.org/pdf/physics/0511251.pdf>`_ Physical Review Letters, 2006, 96(17):174502.
 
 * 路线
@@ -280,16 +292,14 @@ Investigate how the motion of the object on the cylinders depends on the relevan
 	- 滚动摩擦（摩擦学）
 	- 振动（力学）
 
-* 路线
-	- 搭建一系列装置，观察实验现象，分析现象。
-	- 建立运动方程，进行数值计算，测试模型有效性。
-	- 通过运动方程计算运动的特征量与参量的关系，并与实验、仿真比对。
+* 从这里开始
+	- Enrique Zeleny. `The Friction Oscillator. <http://demonstrations.wolfram.com/TheFrictionOscillator/>`_ Wolfram Demonstrations Project, 2013.
 
 14. 下落的塔 Falling Tower
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 Identical discs are stacked one on top of another to form a freestanding tower. The bottom disc can be removed by applying a sudden horizontal force such that the rest of the tower will drop down onto the surface and the tower remains standing.
 
-把相同的圆盘摞起来以形成一个自立式的塔。底部的圆盘能通过施加一个突然 [#]_ 的水平力来去除，同时 [#]_ 保持塔的剩余部分立着坐落在桌面上。
+把相同的圆盘摞起来以形成一个自立式的塔 [#]_ 。底部的圆盘能通过施加一个突然 [#]_ 的水平力来去除，同时 [#]_ 保持塔的剩余部分立着坐落在桌面上。
 
 Investigate the phenomenon and determine the conditions that allow the tower to remain standing.
 
@@ -314,18 +324,10 @@ Explain this phenomenon and investigate how the rate depends on the relevant par
 解释这个现象并探究这个速率如何依赖于相关参量。
 
 * 关键词
-	- 通过小孔的颗粒流问题
-	- 拱桥效应的稳定性（颗粒力学、颗粒的统计力学）
+	- 通过小孔/漏斗的颗粒流问题（颗粒力学）
 
-* 参考
-	- Beverloo W A , Leniger H A , Velde J V D . `The flow of granular solids through orifices[J]. <http://sci-hub.tw/10.1016/0009-2509(61)85030-6>`_ Chemical Engineering Science, 1961, 15(3-4):260-269.
-	- Tang J , Sadighpour S , Behringer R . `Jamming of Granular Flow in a Two-Dimensional Hopper[J] <http://www.physics.emory.edu/faculty/weeks/lab/papers/To_PRL_01.pdf>`_ Physical Review Letters, 2001, 86(1):71-74.
-	- 更多可能有用的参考文献，可以参考 Liu Q Y , Yang G C , Hu M B , et al. Optimization of Granular Chute Flow with Two Bottlenecks[J]. Applied Mechanics and Materials, 2014, 487:532-535. 一文的 *Reference* 。
-
-* 路线
-	- 利用现有模型计算流速，通过实验给出经验修正。
-	- 建立颗粒统计力学模型，计算外界驱动激发的粒子数。
-	- 建立描述摩擦行为的模型，尝试解释实验。
+* 特别提醒
+	- 或许可以使用统计物理方法，计算外界驱动激发的粒子数。
 
 16. 镍钛引擎 Nitinol Engine
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
@@ -340,9 +342,6 @@ Investigate the properties of such an engine.
 * 关键词
 	- 形状记忆效应（固体物理）
 	- 发动机性能（一点点机械动力知识）
-
-* 参考
-	- Cho H , Takeda Y , Sakuma T . `Fabrication and Output Power Characteristics of Heat-Engines Using Tape-Shaped SMA Element[J]. <http://sci-hub.tw/10.1007/978-3-319-53306-3_1>`_ 2017. in Sun Q , Matsui R , Takeda K , et al. Advances in Shape Memory Materials[J]. Advanced Structured Materials, 2017.
 
 * 路线
 	- 寻找/建立相变时的应力等物理量的表达式，用于计算转矩、转速。
@@ -360,10 +359,8 @@ Investigate the parameters that affect the distance and the trajectory.
 
 * 关键词/从这里开始
 	- 陀螺效应（刚体力学）
-	- `空气阻力 <https://en.wikipedia.org/wiki/Drag_(physics)>`_ （流体力学）
-
-* 参考
-	- 任何一本理论力学教材的刚体定轴转动问题、朗道《力学》 [#]_
+	- `空气阻力 <https://en.wikipedia.org/wiki/Drag_(physics)>`_ （空气动力学）
+	- `The Aerodynamics and Stability of Flying Discs <http://large.stanford.edu/courses/2007/ph210/scodary1/>`_
 
 * 路线
 	- 练绝技（笑）
@@ -378,11 +375,13 @@ Investigate the parameters that affect the distance and the trajectory.
 
 .. [#] 在关于亚瑟王的西方神话传说中，摩根勒菲是一名女性巫师的名字，也用于指代她用巫术所创造的空中城堡幻象。
 
-.. [#] 看上去， *similar* 一词相当含糊，仿佛意味着各种各样的蜃景都可以是研究对象。实际上，狭义的 *Fata Morgana* 仅指某一类复杂蜃景，它相似于一般的上现蜃景，但它在竖直方向上包含多幅图像、或者说一系列图像）。具体可以参考 Young A T , Frappa E . `Mirages at Lake Geneva: the Fata Morgana[J]. <http://sci-hub.tw/10.1364/ao.56.000g59>`_ Applied Optics, 2017, 56(19):G59.
+.. [#] 看上去， *similar* 一词相当含糊，仿佛意味着各种各样的蜃景都可以是研究对象。实际上，狭义的 *Fata Morgana* 仅指某一类复杂蜃景，它相似于一般的上现蜃景，但它在竖直方向上包含多幅图像、或者说一系列图像）。
 
 .. [#] 注意这里说的动力学稳定性（Dynamics Stability）与题目中的动态稳定（dynamic stablization）不是同一概念！
 
 .. [#] 原文 *massive object* 也可能指一般的有质量的物体，但考虑为较重的物体对本题的研究是有特别意义的。
+
+.. [#] 仅限定每层只有一个圆盘，而未限定具体的摆放位置。也就是说，你或许可以造一个斜塔。
 
 .. [#] 可能指仅在造成可见位移之前有力的作用，也可能只是指移出底部砖块耗时很短。
 
@@ -391,8 +390,6 @@ Investigate the parameters that affect the distance and the trajectory.
 .. [#] 注意题目原文并未限定内容物是什么， *salt or pepper* 仅仅是用于对容器的说明。
 
 .. [#] 不同规则、不同地域的标准是有些不同的，但这对研究的意义并无影响，因为这个条件的存在只是为了把研究范围限定在可手持的纸牌的范围内。
-
-.. [#] 如果你真的渴望力量，请参考马尔契夫《理论力学》。
 
 -------------
 启发性问题
