--- a/source/2. Intro_Tournament.rst
+++ b/source/2. Intro_Tournament.rst
@@ -32,16 +32,13 @@
 竞赛主要相关资料来源
 ----------------------
 
-- IYPT官方网站的档案，往年题目、比赛视频和研究资料：http://archive.iypt.org
+- IYPT官方网站的档案，往年题目、比赛视频和研究资料：http://archive.iypt.org/
 - GYPT官方网站的指引，题目、视频、指引：https://gypt.org/aufgaben.html （德文，建议翻译成英文看）
-- Reference Kit，某学者整理的参考资料，提供论文、视频的标题和链接： http://kit.ilyam.org
-- STEM，加拿大学生团体，整理的参考资料，提供论文、视频的标题和链接：http://stemfellowship.org/iypt-2020-references-2
-- 哔哩哔哩弹幕视频网站中的自媒体：CaYPT等。
+- Reference Kit，某学者整理的参考资料，提供标题和链接： http://kit.ilyam.org
 - 微信公众号：IYPT青年物理学家
 - 任何一个学术搜索引擎，如百度学术
 - 任何一个论文文档获取途径，如 sci-hub_
 - Youtube（以及任何一个“科学上网”方式或者 onlinevideoconverter_ ）
-- Wikipedia，条目数量质量比百度好很多，常见的自然现象、本科以内的核心数理知识都能在上面找到系统的介绍：https://en.wikipedia.org
 
 .. _sci-hub: https://sci-hub.org.cn/
 
