--- a/source/7. Appendix.rst
+++ b/source/7. Appendix.rst
@@ -5,9 +5,17 @@
 ----------------------------
 2020年竞赛题目与试析
 ----------------------------
-我提供的中文翻译和注解仅供参考。翻译的原则是：在中英文的分句能一一对应的前提下，标题尽量还原词汇的背景含义和艺术性（而可能与题目内容关系并不密切），现象描述部分尽量亲切地表述原文最可能要指代的现象（而可能导致含义变得狭窄），任务指定部分尽量保持原意（而不限定任何题意理解和研究的方向）。
+中文翻译和注解仅供参考。翻译的原则是：在中英文的分句能一一对应的前提下，标题尽量还原词汇的背景含义和艺术性（而可能与题目内容关系并不密切），现象描述部分尽量亲切地表述原文最可能要指代的现象（而可能导致含义变得狭窄），任务指定部分尽量保持原意（而不限定任何题意理解和研究的方向）。
 
-我提供某些文献，可能是出于希望读者学习其方法，也可能是因为其参考文献、印证文献的列表有较大的参考价值，但读者不一定一开始就适合阅读它们。我指出的研究领域和方向很可能不正确或是不准确，且仅建议在完全不知所措时参考，否则会错过锤炼信息搜寻能力、积累见闻的机会，而且即便方向正确，它们也不一定适合读者去试，因为它们基于某些学术上的价值取向而非不利于竞赛成绩的价值取向。对于比赛，自圆其说永远比实验与理论不相符要好。
+*关键词* 是我很不愿意写的栏目，因为这样写总是过于片面，但让新手接触一些相关的名词是有意义的。
+
+*从这里开始* 是“亲民”的栏目，从中可以获取对问题的第一印象。
+
+*高手示范* 栏目的参考文献都有很大的价值，有些你不得不参考（如第九题），有些你最好参考一下（如第八题），有些你参考不了（如第七题）。
+
+*特别提醒* 栏目是我对网络上已有的参考文献列表的补充，我认为其背后可能有有价值的问题，有余力者可以考虑。
+
+*路线* 是我提供的一条思路。我指出的研究领域和方向很可能不正确或是不准确，且仅建议在完全不知所措时参考，否则会错过锤炼信息搜寻能力、积累见闻的机会。即便我说的是对的，也应当尽量不照搬，因为寻找自己认为有价值的问题去研究也是研究重要的一环。
 
 寻找更多资料，可以访问：http://stemfellowship.org/iypt-2020-references-2/。
 
@@ -44,7 +52,7 @@ Explain the phenomenon.
 解释这个现象。
 
 * 关键词
-	- 不同边界条件下的圆柱体绕流问题（流体力学）
+	- 一定边界条件下的圆柱体绕流问题（流体力学）
 
 * 从这里开始
 	- 宽德效应 `Coandă Effect <https://en.wikipedia.org/wiki/Coandă_effect>`_
@@ -112,17 +120,14 @@ Investigate the phenomenon.
 
 探究这个现象。
 
+.. image:: image/5.jpg
+
 * 关键词
 	- 折射定律（几何光学）
 	- 折射率梯度（一点点流体力学、热光效应等）
 
 * 从这里开始
 	- Young A T , Frappa E . `Mirages at Lake Geneva: the Fata Morgana[J]. <http://sci-hub.tw/10.1364/ao.56.000g59>`_ Applied Optics, 2017, 56(19):G59.
-
-* 路线
-	- 激光光斑的摩根勒菲蜃景重现
-	- 图像的摩根勒菲蜃景
-	- 摩根勒菲蜃景的控制与应用
 
 6. 萨克逊碗 Saxon Bowl
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
@@ -139,8 +144,9 @@ Investigate the parameters that determine the time of sinking.
 	- 动力学方程的逆函数（力学）
 
 * 从这里开始
+	- 任何一个实验视频
 	- `StackExchange Physics: What physics equation can be used to describe the saxon bowl experiment? <https://physics.stackexchange.com/questions/416112/what-physics-equation-can-be-used-to-describe-the-saxon-bowl-experiment>`_
-	- `Ilinblog <http://ilinblog.ru/article.php?id_article=58>`_
+	- `Ilinblog: Saxon Bowl IYPT 2020 - analytical solution <http://ilinblog.ru/article.php?id_article=58>`_
 	- Greer A , Kincanon E . `An experiment with Saxon bowls[J]. <https://www.researchgate.net/publication/239045627_An_experiment_with_Saxon_bowls>`_ Physics Teacher, 2000, 38(2):112-112.
 
 * 路线
@@ -156,6 +162,8 @@ Put a string through a ball with a hole in it such that the ball can move freely
 Investigate the phenomenon.
 
 探究这个现象。
+
+.. image:: http://stemfellowship.org/wp-content/uploads/2019/07/pendulum.jpg
 
 * 关键词/从这里开始
 	- `Astrojax <https://en.wikipedia.org/wiki/Astrojax>`_
@@ -188,6 +196,9 @@ Investigate the properties of such a membrane filter.
 * 高手示范
 	- BB Stogin, L Gockowski, H Feldstein, H Claure, J Wang, TS Wong. `Free-standing liquid membranes as unusual particle separators[J]. <https://advances.sciencemag.org/content/4/8/eaat3276>`_ Science Advances, 2018, 4(8):eaat3276.
 
+* 特别提醒
+	- Zou J , Wang W , Ji C , et al. `Droplets passing through a soap film[J]. <http://sci-hub.tw/10.1063/1.4986798>`_ Physics of Fluids, 2017, 29(6):062110.
+
 9. 磁悬浮 Magnet Levitation
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 Under certain circumstances, the “flea” of a magnetic stirrer can rise up and levitate stably in a viscous fluid during stirring.
@@ -202,6 +213,9 @@ Investigate the origins of the dynamic stabilization of the “flea” and how i
 	- 粘滞阻力（流体力学）
 	- 磁场分布（电磁场论）
 	- 动力学稳定性 [#]_ （力学）
+
+* 从这里开始
+	- `Synopsis: Levitating in a Fluid <https://physics.aps.org/synopsis-for/10.1103/PhysRevLett.121.064502>`_
 
 * 高手示范
 	- K. A. Baldwin, J.-B. de Fouchier, P. Atkinson, et al. `Magnetic Levitation Stabilized by Streaming Fluid Flows[J]. <https://arxiv.org/pdf/1805.08608.pdf>`_ Physical Review Letters, 2018, 121(6):064502-.
@@ -264,6 +278,8 @@ A stationary cylindrical vessel containing a rotating plate near the bottom surf
 Explain this phenomenon and investigate the dependence on the relevant parameters.
 
 解释这个现象并探究其与相关参量的依赖关系。
+
+.. image:: http://stemfellowship.org/wp-content/uploads/2019/07/2-Figure1-1.jpg
 
 * 关键词
 	- 旋转中的液体（流体力学）
