--- a/source/Physics/Mathematics and Physics.tex
+++ b/source/Physics/Mathematics and Physics.tex
@@ -27,13 +27,14 @@
 		\section{量纲}
 		\section{经典与量子、宏观与微观、低速与高速}
 
-	\part{分析}
+	\part{解析表达式的分析}
 		\section{偏微分方程的分离变量法}
 		\section{二阶常微分方程}
+		\section{Fourier变换}
 		\section{近似}
 		\section{微扰}
 
-	\part{计算、实验、数据}
+	\part{数值的分析}
 		\section{数值计算原理}
 		\section{测量不确定度}
 		\section{拟合}
