--- a/source/Physics/Mathematics and Physics.tex
+++ b/source/Physics/Mathematics and Physics.tex
@@ -1,6 +1,6 @@
 % !TEX program = xelatex
 \documentclass[10pt]{article}
-\usepackage{NotesTeX2,lipsum,amsmath}
+\usepackage{NotesTeX2,lipsum,amsmath,indentfirst}
 
 \renewcommand{\minalignsep}{0pt}
 \renewcommand{\contentsname}{目录}
@@ -11,7 +11,7 @@
 		{\Huge 先修数学物理知识}%掌握某些必要而通用的物理知识对于解决各领域的物理问题都有很大的帮助，甚至其中的一些如果不掌握就会有大的危害。我将进行这样的几个专题的介绍。只要求读者有微积分、矩阵的概念性知识和计算能力。
 	\end{center}
 }
-\author{N518 asd1dsa}
+\author{asd1dsa}
 \affiliation{
 哈尔滨工业大学（威海）\\
 理学院
@@ -24,7 +24,61 @@
 	\pagestyle{fancynotes}
 	\part{定性与半定量分析}
 		\section{对称性}
+			\subsection{可区分性}
+				如果你找得到某种可以区分两件事物的手段，那么它们就是不同的，否则它们就是\textbf{全同的}、不可区分的。
+
+				在很多具体问题中，我们并不关心两个物体的具体细节是否相同。比如，现在有一节电池，但电器里需要装两节电池从而还需要买一节，那么我们可能只关心新买的电池和现有的电池是不是同一型号的，而基本不关心它们是什么品牌、包装。这种情况下，可以说相同型号电池对于我们的需求而言是\textbf{等价}的，也就是说\textit{在“能不能使电器正常工作”的这个问题上}是不可区分的。
+				
+				~{}\\
+
+				可区分性和任何科学理论的联系都是相当基本的。在“卡尔萨根的喷火龙”的故事中，某人声称他的车库里有一条喷火龙，但它具有完美的“透明”特性，以至于任何人类能掌握的探测手段都无法探测到它。在之前的对科学的讨论中，我们说这条论述不是科学的。其实还有另一种说法，喷火龙的存在与否是（物理上）不可区分的，唯一的可区分的不同就是这个人是宣称喷火龙存在还是否定喷火龙的存在——而我们显然不关心这个问题。
+
+				可区分性和我们常说的\textbf{状态}的概念也是密切联系着的。假如现在我们要研究天体系统的运动，而科学仪器允许我们确定天体的所有可区分性质，如形状尺寸、质量分布、电荷量、质心位置与速度、自转角动量等物理量，现在把这一系列数据记作“状态”。但由于决定天体运动的引力相互作用占主导，从而不同的电荷量并不造成可区分的影响；由于天体相距很远，所以形状尺寸和质量分布也并不重要。最终只有总质量、质心位置与速度、自转角动量是需要考虑的，这些可以数据可以叫做“天体的状态”。由于在运动中，总质量和自转角动量不易改变，所以常把它们分离出来称作“天体的\textbf{性质}”，而位置、速度、自转角动量仍称作“天体的运动状态”。这也是为什么以下对“经典决定性原理”的两种陈述是等价的：
+				\begin{itemize}
+					\item 物体此刻的位置与速度决定其将来的位置与速度。
+					\item 物体的力学状态是“因果决定性”的。
+				\end{itemize}
+				这里面没有提到自转角动量，是因为对一般的物体运动的讨论不能忽略其形状（即内部结构），而自转角动量实际上是物体内部粒子的相对运动状态的一个函数。
+
+				~{}\\
+
+				顺便一提，似乎任何乍一看相同的物体在细节上都可以是不同的，那么究竟有没有全同的、以任何已有手段都无法区分的两样事物呢？
+				
+				有！微观物理研究表明，同一类基本粒子是不可区分的。全同的所谓“费米子”（比如电子）构成的系统有一项性质，那就是如果在概率幅\footnote{实际上我说的是波函数。}（其绝对值的平方就是粒子的概率分布）中交换两个粒子的地位会使概率幅变为原来的相反数。而粒子的全同性则要求，交换两个处于同一状态的粒子不改变概率幅，所以概率幅只能是零。也就是说，全同费米子不可能处于相同的状态，这一结果称为“泡利不相容原理”。
+				
+				概率幅和状态（比如位置\footnote{量子力学状态的概念不沿袭经典力学概念，这一说法实际上没有严格意义，但姑且可以这么理解。}）的关系一般是连续的函数，从而相近的状态也是不太可能出现的，这种阻碍全同费米子状态相互靠近的“力量”称为“简并压”。密度极高的中子星正是因为电子简并压不足以抵抗引力，而使得电子与质子结合为中子才形成的。有时中子简并压足以抵抗引力，中子星便能稳定存在。
+
+			\subsection{对称性}
+				如果对某个对象进行某种操作之后，它与原来的（某种）状态相同，就说这个对象在这种操作下具有\textbf{对称性}。比如圆柱体绕轴旋转任意角度都不改变形状，故称其是轴对称的，或者说具有“空间旋转对称性”。
+
+				由于许多物理对象都是与空间位置有关的（如电场分布），那么了解对空间有哪些操作将是有用的。处于某种原因\footnote{与动力学的时空对称性有关，或者说与运动积分可加性有关。}，我们往往只需要了解空间之间的所谓等距映射，空间任意两点间的距离都在进行等距映射后保持不变。可以证明，任何等距映射都是平移、镜像反射和旋转的复合。当然，这三类变换也都是等距映射。
+				
+				不过要注意，一般所说的空间平移、旋转对称性都是指的所谓连续变换下的对称性。这就是说，具有空间平移/旋转对称性的系统经过任何距离的某个方向的平移/任意角度的关于某个轴的旋转都是不变的。
+
+				极矢量轴矢量……
+
+				对称性有什么用处？实际上，任何与空间位置有关的物理量一旦具有某种对称性，那么由它决定的任何结果都将具有这种对称性。比如，没有形状概念的点电荷模型的电荷分布显然是球对称的（具有三维的空间旋转对称性），那么它激发的电场必然也是球对称的。这一事实可以这样陈述：
+
+				\begin{enumerate}
+					\item 若A决定B且C决定D且A与B相同，则C与D相同。或者说，相同的（或者说，等价的）原因给出相同的结果。
+					\item 对称的原因给出对称的结果。这一陈述有时称为\textbf{对称性原理}。
+				\end{enumerate}
+
+				对称性有着一个很具体而又有效的应用：在力学理论中可以证明，每个连续变换的对称性对应着一个守恒量。比如，具有（某个方向上的）空间平移的系统具有守恒的（不随时间改变的）动量（的某个分量）；具有（绕某个轴的）旋转对称性的系统具有守恒的角动量（的某个分量）；具有时间平移对称性的系统具有守恒的能量。
+
+			\subsection{对称性破缺}
+				上述的对称性原理似乎存在漏洞。一只削尖的轴对称的铅笔放在桌面上，它必然会倒下，但它倒下之后将指向一个特定的方向，而这个方向的非对称性是对称的直立状态所不具有的。
+
+				实际上，如果上述系统真的是轴对称的，那么便铅笔便不会倒下。生活中铅笔会倒下是因为桌面不水平、不光洁，因为铅笔不竖直、质量分布不严格轴对称、接触面不严格轴对称，因为环境扰动不是严格轴对称的。而倒立铅笔这个系统处于所谓的不稳平衡点的附近，从而这些微小的、不易区分的非对称将导致系统演化结果的显著非对称。这一现象称为\textbf{明显对称性破缺}。
+
+				还有一类情况：一个具有严格对称性的系统，从理论\footnote{如量子理论。}机制上可以自然地给出非对称的结果，这种情况称为\textbf{自发对称性破缺}。
+
+				CPT变换as footnote？
+
 		\section{量纲}
+			放缩不变性、量纲、Pi定理、算核弹。
+
+
 		\section{经典与量子、宏观与微观、低速与高速}
 
 	\part{解析表达式的分析}
