This commit is induced by RZ.

--- a/source/6. Tournament.rst
+++ b/source/6. Tournament.rst
@@ -163,7 +163,9 @@
 - 记录讨论的内容以供回顾
 - 帮忙改演示文稿
 
-要知道主控很忙，使用文本（小纸条）进行提示应当是主要的方式，只有非常紧急的消息才适合用声音传递给主控。队伍可能需要一个网络连接跨越物理位置的障碍来快速传递文本，这将是非主控队员之间的主要交流方式。
+要知道主控很忙，使用文本（小纸条）进行提示应当是主要的方式，只有非常紧急的消息才适合用声音传递给主控 [*]_ 。队伍可能需要一个网络连接跨越物理位置的障碍来快速传递文本，这将是非主控队员之间的主要交流方式。
+
+[*] 有人指出，IYPT和CUPT实际上都不允许使用声音交流！在CUPT和IYPT的规则文件上找不到这一条，但各届CUPT的手册上都会添加一条 *似乎* 是这个意思的陈述。此外，据说有CUPT裁判主席阻止非主控队员说话的案例。
 
 ^^^^^^^^^^^^^^^^^^
 关于队伍
@@ -188,7 +190,7 @@
 
 每轮比赛前，队伍应当结合手上的对阵图和选题情况表分析可能会做那些题目的正/反/评，进行进一步的准备（比如回顾之前准备好的笔记），尤其是要考虑好反方挑战什么题目。
 
-由于正方分数加权系数高、且高度依赖于赛前实验研究的积累，通常会有避免做得不好的题目被挑战的需要，除了使用有限次数的拒绝权以外，利用规则也有希望做到这一点：如果你们的队伍作正方在作反方之前，那么你可以挑战你想要“保护”的题目。如果挑战成功，作正方时你们不可能被挑战这题。但按照规则，有时你不能挑战这题。
+由于正方分数加权系数高、且高度依赖于赛前实验研究的积累，通常会有避免做得不好的题目被挑战的需要，除了使用有限次数的拒绝权以外，利用规则也有希望做到这一点：如果你们的队伍作反方在作正方之前，那么你可以挑战你想要“保护”的题目。如果挑战成功，作正方时你们不可能被挑战这题。但按照规则，有时你不能挑战这题。
 
 .. [1] 这些规则中的数值可能与当届比赛的真实情况不同，国赛、区域赛、省赛的取值往往也是不同的。
 
@@ -208,7 +210,7 @@
 
 另一类通用的策略是通过反问、冗长的陈述、套话、扯开话题来 **扰乱对手思路、拖延时间** ，这在减少自己表现内容的同时阻止对手表现，甚至有可能引起对手情绪的波动，进而作出不审慎的思考和陈述。这个做法完全违背比赛初衷，我是痛恨的，如果你见过一次你大概也会痛恨它。一个比较友好的变体是：承认自己不了解对方希望讨论的内容从而拒绝讨论，这个做法起到类似的效果，但像是无奈之举，对自己的分数也有不小影响（这也是为什么正方弱的场次通常反方的得分也不高——讨论不起来）。应对的方式是：如果对手拉开话题，那么指出“话题正被拉开”这一点并询问对方是否要放弃当前话题的讨论；如果对手进行大量的反问，那么简短陈述自己的回答再反问回去；如果对手进行冗长的陈述，那么可以以时间有限为由打断对方（如果这个回答不那么重要），此后不要再提不关键的问题以避免对手有太多拖时间的机会。
 
-进攻行为除了在比赛开始后降低对方得分的做法，还可以 **在要挑战的题目上进行精细的挑选** ，迫使对方做准备不良的报告或者消耗拒绝权。详细调查、分析对手学校的弱项的行为比较少见，但常有挑战那些“公认难度较高”的题目的做法出现。我曾遇到过这样的情况：同一轮赛场上的三个队伍互相挑战某三道“难题”，就这三道题就消耗了三支队伍一共六个拒绝权！这种进攻不仅能由反方发起，在正方自选题目的最后一轮还能由正方发起，但准备不充分对反方的影响并不很大——至少没有对正方的大，而且通常实验研究上的缺陷比较显眼，而反方并不会提及自己的实验。不过，这种做法对于创新发明类型的第一题有特别的优势，因为正方提出的方案很可能是反方不曾想到的，从而使反方、评论方因为缺乏这方面的深入了解而难以发挥。
+进攻行为除了在比赛开始后降低对方得分的做法，还可以 **在要挑战的题目上进行精细的挑选** ，迫使对方做准备不良的报告或者消耗拒绝权。详细调查、分析对手学校的弱项的行为比较少见（我猜的），但常有挑战那些“公认难度较高”的题目的做法出现。我曾遇到过这样的情况：同一轮赛场上的三个队伍互相挑战某三道“难题”，就这三道题就消耗了三支队伍一共六个拒绝权！这种进攻不仅能由反方发起，在正方自选题目的最后一轮还能由正方发起，但准备不充分对反方的影响并不很大——至少没有对正方的大，而且通常实验研究上的缺陷比较显眼，而反方并不会提及自己的实验。不过，在末轮选“难题”的做法对于创新发明类型的第一题有特别的优势，因为正方提出的方案很可能是反方不曾想到的，从而使反方、评论方因为缺乏这方面的深入了解而难以发挥。
 
 对于这类进攻没有很好的临时应对措施，唯有在使用拒绝权时更谨慎些，仅用它保护真正的弱点——我们在规划拒绝权时都是 **作最坏的打算** 。如果即便如此打算你们也需要碰运气才能使得自己不完全失去竞争力（过多拒绝而降低了不少加权分数、或者在某一场上表现极差），那就只能怪罪于之前做的研究数目不够了。
 
