--- a/source/Physics/Mathematics and Physics.tex
+++ b/source/Physics/Mathematics and Physics.tex
@@ -82,6 +82,8 @@
 		\section{经典与量子、宏观与微观、低速与高速}
 
 	\part{解析表达式的分析}
+		介绍不予证明但以示例解说的重要命题，让读者将它们作为武器来用。实际上同时也能为读者今后的数学理论学习提供兴趣背景。
+		
 		\section{偏微分方程的分离变量法}
 		\section{二阶常微分方程}
 		\section{Fourier变换}
