--- a/source/7. Appendix.rst
+++ b/source/7. Appendix.rst
@@ -250,21 +250,21 @@ Investigate the characteristics of the conducting line.
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 Shine a laser beam onto a dark surface. A granular pattern can be seen inside the spot. When the pattern is observed by a camera or the eye, that is moving slowly, the pattern seems to drift relative to the surface.
 
-向暗表面上照一束激光，在光斑内部可以看到颗粒状图案。用人眼或相机观察时，它是缓慢运动着的，看着就像图案在相对表面运动一样。
+向暗表面 [#]_ 上照一束激光，在光斑内部可以看到颗粒状图案。用人眼或相机观察时，它是缓慢运动着的，看着就像图案在相对表面运动一样。
 
 Explain the phenomenon and investigate how the drift depends on relevant parameters.
 
 解释此现象并探究漂移是如何依赖于相关参量的。
 
 * 关键词
-	- 漫反射（几何光学）
+	- 漫反射（几何光学、统计光学）
 	- 干涉（波动光学）
 
 * 从这里开始
 	- `知乎：为什么激光光束（或其反射）会看起来有颗粒感？ <https://www.zhihu.com/question/27062939/answer/35097037>`_
 
 * 高手示范
-	- Duncan D , Kirkpatrick S . `Algorithms for simulation of speckle (laser and otherwise)[C]. <https://www.researchgate.net/publication/233783056_Algorithms_for_simulation_of_speckle_laser_and_otherwise>`_ Spie-bios Photonics West. 2008.
+	- Butters J N . `Laser Speckle and Related Phenomena[J]. <https://libgen.pw/item/detail/id/969679>`_ Optica Acta International Journal of Optics, 1976, 23(10):842-843.
 
 12. 多边形旋涡 Polygon Vortex
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
@@ -397,6 +397,8 @@ Investigate the parameters that affect the distance and the trajectory.
 .. [#] 看上去， *similar* 一词相当含糊，仿佛意味着各种各样的蜃景都可以是研究对象。实际上，狭义的 *Fata Morgana* 仅指某一类复杂蜃景，它相似于一般的上现蜃景，但它在竖直方向上包含多幅图像、或者说一系列图像）。
 
 .. [#] 注意这里说的动力学稳定性（Dynamics Stability）与题目中的动态稳定（dynamic stablization）不是同一概念！
+
+.. [#] 要求是暗表面可能只是为了保护眼睛和传感器，而并非是物理上的要求。
 
 .. [#] 原文 *massive object* 也可能指一般的有质量的物体，但考虑为较重的物体对本题的研究是有特别意义的。
 
